--- a/dep-dp.yaml
+++ b/dep-dp.yaml
@@ -26,6 +26,13 @@ spec:
             port: 80
           initialDelaySeconds: 5
           timeoutSeconds: 1
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 1
         ports:
         - containerPort: 80
         env:
