--- a/dep.yaml
+++ b/dep.yaml
@@ -26,5 +26,12 @@ spec:
             port: 80
           initialDelaySeconds: 5
           timeoutSeconds: 1
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 80
+          initialDelaySeconds: 5
+          periodSeconds: 5
+          timeoutSeconds: 1
         ports:
         - containerPort: 80
